--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ section{
   .help-section {
     width: 45vw; 
     height: 0;
-    padding-top: 44%;
+    padding-top: 45%;
     margin: auto 0;
     position: absolute;
     left: 20px;
@@ -27,6 +27,10 @@ section{
     text-align: center;
     z-index: -8;
     overflow: hidden;
+  }
+
+  .help-section-mobile {
+    display: none;
   }
 
   .help-section-inside {
@@ -55,78 +59,6 @@ section{
     left: 0;
     max-width: 100%;
   }
-
-  /* .bubble-containers {
-    width: 100%;
-    height: 20%;
-  }
-
-  .comic-bubbles {
-    width: 13%;
-    height: 13%;
-  } */
-
-  /* .bubble1 {
-    position: absolute;
-    left: 10%;
-    top: 10%;
-    animation: bubble-pop 2.5s ease infinite;
-  }
-
-  .bubble2 {
-    position: absolute;
-    left: 38%;
-    top: 10%;
-    animation: bubble-pop 2.7s ease infinite;
-
-  }
-
-  .bubble3 {
-    position: absolute;
-    top: 10%;
-    left: 70%;
-    animation: bubble-pop 2.6s ease infinite;
-
-  }
-
-  @-webkit-keyframes bubble-pop {
-    0%, 100% {
-      transform: scale(0);
-    }
-
-    5%, 40%, 80% {
-      transform: scale(1.3);
-    }
-    20%, 60% {
-      transform: scale(.9);
-    }
-}
-
-@-moz-keyframes bubble-pop {
-  0%, 100% {
-    transform: scale(0);
-  }
-
-  5%, 40%, 80% {
-    transform: scale(1.3);
-  }
-  20%, 60% {
-    transform: scale(.9);
-  }
-}
-
-  @keyframes bubble-pop {
-    0%, 100% {
-      transform: scale(0);
-    }
-
-    5%, 40%, 80% {
-      transform: scale(1.3);
-    }
-    20%, 60% {
-      transform: scale(.9);
-    }
-  } */
 
   .comic-issue {
     background-color: black;
@@ -189,7 +121,7 @@ section{
   }
 
   .div-container{
-    width: 45vw; 
+    width: 40vw; 
     height: 0;
     padding-top: 45%;
     margin: auto 0;
@@ -199,7 +131,6 @@ section{
     top: 0;
     bottom: 0;
     text-align: center;
-    /* overflow: hidden; */
     border: 10px solid white;
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
@@ -267,7 +198,6 @@ section{
     left: 0;
     width: 100%;
     height: 100%;
-    /* transform: rotateY(180deg); */
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -318,13 +248,21 @@ section{
     animation: divactive 5s forwards;
   }
 
-.div-reverse-rotate {
+  /* .div-active-mobile{
+    transform: rotateY(-180deg);
+    -webkit-animation: divactive 5s forwards;
+    -moz-animation: divactive 5s forwards;
+    -ms-animation: divactive 5s forwards;
+    animation: divactive 5s forwards;
+  } */
+
+/* .div-reverse-rotate {
     transform: rotateY(180deg);
     -webkit-animation: divactive 2s forwards;
     -moz-animation: divactive 2s forwards;
     -ms-animation: divactive 2s forwards;
     animation: divactive 2s forwards;
-  }
+  } */
 
   @keyframes divactive {
     0% {
@@ -360,7 +298,7 @@ section{
     width: 75%;
     height: 8%;
     margin: 3% auto;
-    font-size: 3vw;
+    font-size: 2.3vw;
     text-align: center;
     background-color: white;
     border: 2px solid black;
@@ -387,7 +325,7 @@ section{
       padding: 15px;
       margin: 3% auto;
       display: block;
-      font-size: 3vw;
+      font-size: 2.3vw;
       text-align: center;
       resize: none;
       background-color: white;
@@ -422,7 +360,7 @@ section{
     border: 2px solid black;
     text-decoration: none;
     color: black;
-    font-size: 3vw;
+    font-size: 2.3vw;
     display: block;
     margin: 0 auto;
     background-color: white;
@@ -455,15 +393,12 @@ section{
   .add-info {
     padding-right: 20px;
     padding-left: 20px;
-    /* padding-top: 30%; */
     line-height: 2;
     font-size: 2vw;
   }
 
   .panel {
     padding: 5px;
-    /* font-size: 20px; */
-    /* line-height: 25px; */
     text-align: left;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -548,7 +483,6 @@ section{
   }
 
   .tenth-panel {
-    /* clear: both; */
     float: left;
     height: 50%;
     width: 50%;
@@ -578,74 +512,54 @@ section{
 
   .seventeenth-panel {
     height: 20%;
-    /* border-bottom: 10px solid white; */
-    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .eighteenth-panel {
     float: left;
     width: 25%;
     height: 40%;
-    /* border-bottom: 10px solid white; */
-    /* border-right: 10px solid white; */
-    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .nineteenth-panel {
     float: left;
     width: 25%;
     height: 40%;
-    /* border-bottom: 10px solid white; */
-    /* border-right: 10px solid white; */
-    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentieth-panel {
     float: left;
     width: 25%;
     height: 40%;
-    /* border-bottom: 10px solid white; */
-    /* border-right: 10px solid white; */
-    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentyfirst-panel {
     float: right;
     width: 25%;
     height: 40%;
-    /* border-bottom: 10px solid white; */
-    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentysecond-panel {
     float: left;
     width: 25%;
     height: 40%;
-    /* border-right: 10px solid white; */
-    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentythird-panel {
     float: left;
     width: 25%;
     height: 40%;
-    /* border-right: 10px solid white; */
-    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentyfourth-panel {
     float: left;
     width: 25%;
     height: 40%;
-    /* border-right: 10px solid white; */
-    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   .twentyfifth-panel {
     float: right;
     width: 25%;
     height: 40%;
-    /* background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212)); */
   }
 
   a {
@@ -749,8 +663,6 @@ section{
   .panel1-img {
     display: block;
     height: 80%;
-    /* width: auto; */
-    /* margin: 5% auto; */
   }
 
   .panel2-gif {
@@ -928,4 +840,110 @@ section{
 .webapp-links {
   font-size: 10px;
   margin: 0;
+}
+
+@media only screen and (max-width: 1000px)  {
+  .help-section {
+    display: none;
+  }
+
+  .help-section-mobile {
+    display: block;
+    position: absolute;
+    bottom: 10%;
+    left: 0;
+    right: 0;
+    color: white;
+  }
+
+  .mobile-btn {
+    width: 200px;
+    height: 100px;
+    background-color: white;
+    font-size: 5vw;
+    font-family: 'Bangers', cursive;
+    margin: 0 5px;
+    padding: 10px;
+  }
+
+  .div-container{
+    width: 80vw; 
+    height: 0;
+    padding-top: 90%;
+    margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    text-align: center;
+    border: 10px solid white;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+  }
+
+  /* .div-small-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(0deg);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background-image:radial-gradient(circle, rgb(174, 231, 250), rgb(4, 160, 212));
+  } */
+
+  .div1back {
+    transform-origin: center;
+    transition: 1s;
+    z-index: 1;
+  }
+
+  .div2 {
+    transform-origin: center;
+    transition: 1s;   
+    z-index: 0;
+  }
+
+  .div2back {
+    transform-origin: center;
+    transition: 1s;
+    z-index: -1;
+  }
+
+  .div3 {
+    transform-origin: center;
+    transition: 1s;   
+    z-index: -2;
+  }
+
+  .div3back {
+    transform-origin: center;
+    transition: 1s;
+    z-index: -3;
+  }
+
+  .div4 {
+    transform-origin: center;
+    transition: 1s;   
+    z-index: -4;
+  }
+
+  .div4back {
+    transform-origin: center;
+    transition: 1s;
+    z-index: -5;
+  }
+
+  .div5 {
+    transform-origin: center;
+    transition: 1s;   
+    z-index: -6;
+  }
+
 }
